--- a/icr2dash.ini
+++ b/icr2dash.ini
@@ -1,3 +1,7 @@
+[General]
+loop_ms = 16
+key_listener_delay = 0.01
+
 [Boost rise and fall speed]
 boost_drop_rate_per_second = 2
 boost_climb_rate_per_second = 2
@@ -9,3 +13,19 @@ point2 = 1220, 582, 158, 198, 223
 [Overlay positioning]
 x_adjustment = 8
 y_adjustment = 2
+
+[Gear shifting]
+hshifter = on
+clutch = on
+icr2_shiftup_key = u
+icr2_shiftdown_key = j
+shifter_gear1_key = z
+shifter_gear2_key = x
+shifter_gear3_key = c
+shifter_gear4_key = v
+shifter_gear5_key = b
+shifter_gear6_key = n
+downshift_delay = 0.07
+upshift_delay = 0.07
+clutch_key = q
+gear_grinding_volume = 0.1
