--- a/dash_reader.ini
+++ b/dash_reader.ini
@@ -2,6 +2,17 @@
 # numbers that appear on the default ICR2 cockpit, as well as the positions
 # of the bar indicator for the rollbars.
 
+[Boost knob]
+Boost_knob_1 = 277, 816
+Boost_knob_2 = 303, 828
+Boost_knob_3 = 311, 847
+Boost_knob_4 = 308, 871
+Boost_knob_5 = 289, 885
+Boost_knob_6 = 265, 887
+Boost_knob_7 = 245, 871
+Boost_knob_8 = 241, 847
+Boost_knob_9 = 253, 826
+
 [RPM1000]
 A = 522, 816
 B = 538, 828
@@ -42,7 +53,7 @@ G = 658, 842
 A = 556, 740
 B = 568, 748
 C = 568, 772
-D = 556, 778
+D = 556, 780
 E = 544, 772
 F = 544, 748
 G = 556, 760
@@ -51,7 +62,7 @@ G = 556, 760
 A = 592, 740
 B = 604, 748
 C = 604, 772
-D = 592, 778
+D = 592, 780
 E = 578, 772
 F = 578, 748
 G = 592, 760
@@ -60,36 +71,36 @@ G = 592, 760
 A = 394, 814
 B = 404, 826
 C = 404, 844
-D = 394, 850
+D = 394, 852
 E = 384, 844
 F = 384, 826
-G = 394, 832
+G = 394, 834
 
 [Temperature10]
 A = 428, 814
 B = 436, 826
 C = 436, 844
-D = 428, 850
+D = 428, 852
 E = 416, 844
 F = 416, 826
-G = 428, 832
+G = 428, 834
 
 [Temperature1]
 A = 458, 814
 B = 470, 826
 C = 470, 844
-D = 458, 850
+D = 458, 852
 E = 448, 844
 F = 448, 826
-G = 458, 832
+G = 458, 834
 
 [Fuel10]
 A = 776, 740
 B = 788, 752
 C = 788, 772
 D = 776, 778
-E = 762, 772
-F = 762, 752
+E = 764, 772
+F = 764, 752
 G = 776, 760
 
 [Fuel1]
@@ -112,39 +123,39 @@ G = 846, 760
 
 [Fuel0.01]
 A = 880, 740
-B = 891, 752
-C = 891, 772
+B = 892, 752
+C = 892, 772
 D = 880, 778
-E = 867, 772
-F = 867, 752
+E = 868, 772
+F = 868, 752
 G = 880, 760
 
 [MPH100]
-A = 668, 742
+A = 668, 744
 B = 678, 752
 C = 678, 772
-D = 668, 778
+D = 668, 780
 E = 658, 772
 F = 658, 752
-G = 668, 760
+G = 668, 762
 
 [MPH10]
-A = 699, 742
+A = 699, 744
 B = 712, 752
 C = 712, 772
-D = 699, 778
+D = 699, 780
 E = 688, 772
 F = 688, 752
-G = 699, 760
+G = 699, 762
 
 [MPH1]
-A = 732, 742
+A = 732, 744
 B = 744, 752
 C = 744, 772
-D = 732, 778
+D = 732, 780
 E = 721, 772
 F = 721, 752
-G = 732, 760
+G = 732, 762
 
 [Gear]
 A = 994, 819
