--- a/icr2dash.ini
+++ b/icr2dash.ini
@@ -1,14 +1,16 @@
 [General]
 loop_ms = 16
 key_listener_delay = 0.01
+app_keywords = cart
+lcd_detect_threshold = 92
 
 [Boost rise and fall speed]
 boost_drop_rate_per_second = 2
 boost_climb_rate_per_second = 2
 
 [Cockpit detection]
-point1 = 52, 582, 158, 198, 223
-point2 = 1220, 582, 158, 198, 223
+point1 = 555, 588, 49, 52, 57
+point2 = 666, 588, 49, 52, 57
 
 [Overlay positioning]
 x_adjustment = 8
@@ -29,3 +31,4 @@ downshift_delay = 0.07
 upshift_delay = 0.07
 clutch_key = q
 gear_grinding_volume = 0.1
+
