--- a/dash_reader.ini
+++ b/dash_reader.ini
@@ -166,6 +166,60 @@ E = 979, 859
 F = 980, 830
 G = 994, 845
 
+[Time_t001]
+A = 884, 815
+B = 895, 823
+C = 895, 843
+D = 884, 851
+E = 872, 843
+F = 873, 822
+G = 884, 833
+
+[Time_t010]
+A = 851, 815
+B = 862, 823
+C = 862, 843
+D = 851, 851
+E = 841, 843
+F = 841, 822
+G = 851, 833
+
+[Time_t100]
+A = 820, 815
+B = 831, 823
+C = 831, 843
+D = 820, 851
+E = 809, 843
+F = 809, 822
+G = 820, 833
+
+[Time_s01]
+A = 784, 815
+B = 794, 823
+C = 794, 843
+D = 784, 851
+E = 773, 843
+F = 773, 822
+G = 784, 833
+
+[Time_s10]
+A = 752, 815
+B = 763, 823
+C = 763, 843
+D = 752, 851
+E = 741, 843
+F = 741, 822
+G = 752, 833
+
+[Time_m1]
+A = 716, 815
+B = 727, 823
+C = 727, 843
+D = 716, 851
+E = 705, 843
+F = 705, 822
+G = 716, 833
+
 [Rollbar]
 Bars_min_x = 787
 Bars_max_x = 848
