--- a/icr2dash.ini
+++ b/icr2dash.ini
@@ -1,7 +1,7 @@
 [General]
 loop_ms = 16
 key_listener_delay = 0.01
-app_keywords = cart
+app_keywords = CART, INDYCAR
 lcd_detect_threshold = 92
 
 [Boost rise and fall speed]
