--- a/icr2dash.ini
+++ b/icr2dash.ini
@@ -1,8 +1,16 @@
 [General]
 loop_ms = 16
 key_listener_delay = 0.01
-app_keywords = CART, INDYCAR
+app_keywords = CART Racing for Windows
+#app_keywords = RREADY
+#app_keywords = DOSBox, Indycar
+window_match_mode = all
 lcd_detect_threshold = 92
+keepalive_keywords = CART Racing
+#keepalive_keywords = DOSBox
+keepalive_mode = all
+dosbox_mode = yes
+
 
 [Boost rise and fall speed]
 boost_drop_rate_per_second = 2
