--- a/icr2dash.ini
+++ b/icr2dash.ini
@@ -1,16 +1,24 @@
 [General]
 loop_ms = 16
 key_listener_delay = 0.01
-app_keywords = CART Racing for Windows
-#app_keywords = RREADY
-#app_keywords = DOSBox, Indycar
-window_match_mode = all
-lcd_detect_threshold = 92
-keepalive_keywords = CART Racing
-#keepalive_keywords = DOSBox
-keepalive_mode = all
-dosbox_mode = yes
 
+; Uncomment the following lines and comment the others to use different keywords for detecting the game window
+
+#app_keywords = CART Racing for Windows
+#keepalive_keywords = CART Racing
+
+#app_keywords = DOSBox, Indycar
+#keepalive_keywords = DOSBox
+
+app_keywords = Speedy3D
+keepalive_keywords = DOSBox
+
+window_match_mode = all
+keepalive_mode = all
+lcd_detect_threshold = 92
+
+; Set to 'yes' if you are running ICR2 in DOSBox, otherwise 'no' for Windy
+dosbox_mode = yes
 
 [Boost rise and fall speed]
 boost_drop_rate_per_second = 2
@@ -21,7 +29,11 @@ point1 = 555, 588, 49, 52, 57
 point2 = 666, 588, 49, 52, 57
 
 [Overlay positioning]
-x_adjustment = 8
+
+; Depending on the version of ICR2 you are using (especially Rendition), you 
+; may need to adjust these values to get the overlay to line up correctly
+
+x_adjustment = 0
 y_adjustment = 2
 
 [Gear shifting]
